# ChangeLog for app-i18n/ibus-mozc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-mozc/Attic/ChangeLog,v 1.1 2010/06/11 23:50:08 matsuu Exp $

*ibus-mozc-0.11.365.102 (11 Jun 2010)

  11 Jun 2010; MATSUU Takuto <matsuu@gentoo.org>
  +ibus-mozc-0.11.365.102.ebuild,
  +files/ibus-mozc-0.11.365.102-gentoo.patch, +metadata.xml:
  Initial import.
