@@ -7,5 +7,6 @@ Mozc is a Japanese Input Method Editor (IME) designed for multi-platform such as
 </longdescription>
 <use>
   <flag name='ibus'>Enable support for <pkg>app-i18n/ibus</pkg></flag>
+  <flag name='scim'>Enable support for <pkg>app-i18n/scim</pkg></flag>
 </use>
 </pkgmetadata>
