@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/ibus-mozc
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-mozc/Attic/ChangeLog,v 1.1 2010/06/11 23:50:08 matsuu Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/ibus-mozc/Attic/ChangeLog,v 1.2 2010/06/17 17:23:04 matsuu Exp $
+
+*ibus-mozc-0.11.383.102 (17 Jun 2010)
+
+  17 Jun 2010; MATSUU Takuto <matsuu@gentoo.org>
+  +ibus-mozc-0.11.383.102.ebuild, metadata.xml:
+  Version bumped. Added scim USE flag.
 
 *ibus-mozc-0.11.365.102 (11 Jun 2010)
 
